--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "fs": "0.0.2",
-    "mime": "^1.3.4"
+    "mime": "^1.3.4",
+    "underscore": "^1.8.3",
+    "url": "^0.11.0"
   }
 }
